--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ keywords = ["notes","server","standardfile","self","hosted"]
 hyper = "0.10"
 hyper-native-tls = "0.2"
 clap = "2.20"
+uuid = { version = "0.2", features = ["serde", "v4"] }
+chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
