Stage jwt base impl.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,15 +10,15 @@ keywords = ["notes","server","standardfile","self","hosted"]
 [dependencies]
 router = "0.5"
 iron = "0.5"
-hyper-native-tls = "0.2"
-clap = "2.20"
-uuid = { version = "0.2", features = ["serde", "v4"] }
-chrono = { version = "0.2", features = ["serde", "rustc-serialize"] }
-rusqlite = { version = "0.9", features = ["chrono"] }
-jsonwebtoken = "1"
+dotenv = "0.10"
+clap = { version = "2.20", features = ["color"] }
+uuid = { version = "0.5", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
+jsonwebtoken = "4"
 rustc-serialize = "0.3"
-serde = "0.9"
-serde_derive = "0.9"
-serde_json = "0.9"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 urlencoded = "0.5"
 rust-crypto = "0.2"
+diesel = { version = "1.1", features = ["sqlite", "chrono"] }
