--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ serde_derive = "1.0"
 serde_json = "1.0"
 urlencoded = "0.5"
 rust-crypto = "0.2"
-diesel = { version = "1.1", features = ["sqlite", "chrono"] }
+bcrypt = "0.1"
+diesel = { version = "1.1", features = ["sqlite", "chrono", "extras"] }
