--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ urlencoded = "0.5"
 rust-crypto = "0.2"
 bcrypt = "0.1"
 diesel = { version = "1.1", features = ["sqlite", "chrono", "extras"] }
+bodyparser = "0.8"
