--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ rust-crypto = "0.2"
 bcrypt = "0.1"
 diesel = { version = "1.1", features = ["sqlite", "chrono", "extras"] }
 bodyparser = "0.8"
+base64 = "0.9"
