--- a/standardfile/Cargo.toml
+++ b/standardfile/Cargo.toml
@@ -29,11 +29,12 @@ gotham_derive = "0.2"
 hyper = "0.11"
 futures = "0.1" # Should upgrade soon
 mime = "0.3"
+cfg-if = "0.1.2"
 
 backend_core = { path = "../backend_core", version = "0.1" }
-backend_sqlite = { path = "../backend_sqlite", version = "0.1", optional = true }
-backend_mysql = { path = "../backend_mysql", version = "0.1", optional = true }
+backend_sqlite = { path = "../backend_sqlite", version = "0.1" }
+backend_mysql = { path = "../backend_mysql", version = "0.1" }
 
 [features]
-sqlite = ["backend_sqlite"]
-mysql = ["backend_mysql"]
+sqlite = []
+mysql = []
