--- a/standardfile/Cargo.toml
+++ b/standardfile/Cargo.toml
@@ -20,7 +20,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 rust-crypto = "0.2"
-bcrypt = "0.1"
+bcrypt = "0.2"
 base64 = "0.9"
 log = "0.4"
 env_logger = "0.5"
@@ -32,9 +32,10 @@ mime = "0.3"
 cfg-if = "0.1.2"
 
 backend_core = { path = "../backend_core", version = "0.1" }
-backend_sqlite = { path = "../backend_sqlite", version = "0.1" }
-backend_mysql = { path = "../backend_mysql", version = "0.1" }
+backend_sqlite = { path = "../backend_sqlite", version = "0.1", optional = true }
+backend_mysql = { path = "../backend_mysql", version = "0.1", optional = true }
 
 [features]
-sqlite = []
-mysql = []
+default = ["sqlite"]
+sqlite = ["backend_sqlite"]
+mysql = ["backend_mysql"]
