--- a/standardfile/Cargo.toml
+++ b/standardfile/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "standardfile"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alexander Dean <dstar@slackless.com>"]
 description = "A Rust StandardFile server implementation."
 readme = "README.md"
@@ -15,8 +15,7 @@ uuid = { version = "0.6", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
 diesel = { version = "1.1", features = ["chrono", "extras"] }
 jsonwebtoken = "4"
-rustc-serialize = "0.3"
-serde = "1.0"
+serde = "1.0.34" # need at least this for flatten.
 serde_derive = "1.0"
 serde_json = "1.0"
 rust-crypto = "0.2"
@@ -24,12 +23,14 @@ bcrypt = "0.2"
 base64 = "0.9"
 log = "0.4"
 env_logger = "0.5"
-gotham = "0.2"
-gotham_derive = "0.2"
-hyper = "0.11"
-futures = "0.1" # Should upgrade soon
-mime = "0.3"
 cfg-if = "0.1.2"
+
+actix = "0.5"
+actix-web = "0.4"
+futures = "0.1"
+#mime = "0.3"
+#hyper = "0.11"
+#futures = "0.1" # Should upgrade soon
 
 backend_core = { path = "../backend_core", version = "0.1" }
 backend_sqlite = { path = "../backend_sqlite", version = "0.1", optional = true }
