--- a/docker/environments/.env.app.dev
+++ b/docker/environments/.env.app.dev
@@ -1,6 +1,8 @@
 SALT_PSEUDO_NONCE=123
 SECRET_KEY_BASE=foobar123foobar
 
+export DB_PATH=localite.db
+
 DB_DATABASE=standardfile
 DB_HOST=db
 DB_PORT=3306
