--- a/backend_core/Cargo.toml
+++ b/backend_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "backend_core"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Alexander Dean <dstar@slackless.com>"]
 description = "The backend definition for the rust standardfile server."
 readme = "README.md"
@@ -9,5 +9,7 @@ keywords = ["notes","server","standardfile","self","hosted"]
 workspace = ".."
 
 [dependencies]
+actix = "0.5"
+r2d2 = "0.8"
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
 diesel = { version = "1.1", features = ["chrono", "extras"] }
