--- a/backend_mysql/Cargo.toml
+++ b/backend_mysql/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "backend_mysql"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Alexander Dean <dstar@slackless.com>"]
 description = "A backend for the rust standardfile server."
 readme = "README.md"
@@ -12,6 +12,6 @@ workspace = ".."
 actix = "0.5"
 r2d2 = "0.8"
 r2d2-diesel = "1.0"
-backend_core = { path = "../backend_core", version = "0.2" }
+backend_core = { path = "../backend_core" }
 chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
 diesel = { version = "1.1", features = ["mysql", "chrono", "extras"] }
